; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/comctl32/extr_nativefont.c_NATIVEFONT_Create.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/comctl32/extr_nativefont.c_NATIVEFONT_Create.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @NATIVEFONT_Create to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @NATIVEFONT_Create(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.TYPE_3__*, align 8
  store i32 %0, i32* %2, align 4
  %4 = call %struct.TYPE_3__* @Alloc(i32 4)
  store %struct.TYPE_3__* %4, %struct.TYPE_3__** %3, align 8
  %5 = load i32, i32* %2, align 4
  %6 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %7 = ptrtoint %struct.TYPE_3__* %6 to i32
  %8 = call i32 @SetWindowLongPtrW(i32 %5, i32 0, i32 %7)
  %9 = load i32, i32* %2, align 4
  %10 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %11 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %10, i32 0, i32 0
  store i32 %9, i32* %11, align 4
  ret i32 0
}

declare dso_local %struct.TYPE_3__* @Alloc(i32) #1

declare dso_local i32 @SetWindowLongPtrW(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
